Clase 3 listas HTML. Clase 4 enlaces e imagenes

--- a/Fundamentos/HTML Y CSS/index.html
+++ b/Fundamentos/HTML Y CSS/index.html
@@ -27,5 +27,22 @@
         <!-- Elemento emfasis "Em"(Cursiva) -->
         <em>Lorem ipsum dolor</em>
         <p>Lorem ipsum <em>dolor sit</em> amet, consectetur adipiscing elit.</p>
+        <!-- Clase 3: Listas(Comienza con ul o ol y cada elemnto va con li) -->
+         <!-- Listas desordenadas -->
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+        <!-- Listas ordenadas -->
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ol>
+        <!-- Clase 4: Enlaces e Imagenes -->
+         <!-- Ver el archivo index ubicado en la carpeta odin-links-and-images para introduccion a enlances -->
+          <!-- Imagenes -->
+          <img src="https://www.theodinproject.com/mstile-310x310.png" height="200" width="200">
 </body>
 </html>
