Realice el proyecto recetas HTML

--- a/Fundamentos/HTML Y CSS/odin-links-and-images/pages/about.html
+++ b/Fundamentos/HTML Y CSS/odin-links-and-images/pages/about.html
@@ -8,6 +8,6 @@
 <body>
     <h1>About Page</h1>
     <a href="https://www.theodinproject.com/about">About The Odin Project</a>
-    <a href="index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
